# sdkd-cxx

./: .gitignore  .gitmodules  CMakeLists.txt  Protocol.pod  README.md  README.pod  bootstrap.pl  cbsdk_client  cbsdkd.kpf  sdkrunner
ci/: bootstrap.pl  build_sdkd.sh
conf/: lcb.cfg  net.cfg  perl.cfg
cplusplus/: .gitignore  Dataset.cpp  Dataset.h  Error.h  Handle.cpp  Handle.h  IODispatch.cpp  IODispatch.h  Makefile  Makefile.darwin  Makefile.linux  Message.cpp  Message.h  Request.cpp  Request.h  Response.cpp  Response.h  cbsdkd.h  defs.mk  main.cpp  sdkd_lcb.cpp  utils.h
cplusplus/contrib/: debug++.h  debug.c  debug.h
jenkins/: build.sh  run.sh  s3_credentials.sh
lib/cbsdk/: constants.py  dataset.py  depstrap.py  driver.py  driverconfig.py  message.py  msgbase.py  request.py  response.py
perl/CBSdkd/: Dataset.pm  Errors.pm
pylib/: s3upload.py  sdkd_impl.py
pylib/sdkd_cpp/: builder.py  lcbpkg.py  versions.json
pytests/sdk/: rebalance.py  sdkbasetestcase.py
sdkbin/: sdkd_perl
sdkd-net/: Sdkd.sln
sdkd-net/Sdkd/: Sdkd.csproj
sdkd-net/Sdkd/Properties/: AssemblyInfo.cs
sdkd-net/Sdkd/Protocol/: Error.cs  MessageBase.cs  Request.cs  Response.cs
sdkd-net/SdkdConsole/: App.config  Program.cs  SdkdConsole.csproj
sdkd-net/SdkdConsole/Properties/: AssemblyInfo.cs
sdkd-net/SdkdTests/: ProtocolTests.cs  ProtocolTestsBase.cs  SdkdTests.csproj
sdkd-net/SdkdTests/Data/: Request.json
sdkd-net/SdkdTests/Properties/: AssemblyInfo.cs
src/: .gitignore  CBASDataset.cpp  CBASLoader.cpp  CBASQueryExecutor.cpp  CMakeLists.txt  Collections.cpp  Collections.h  Control.cpp  DSTest.cpp  Daemon.cpp  Daemon.h  Dataset.cpp  Dataset.h  Error.h  FTSDataset.cpp  FTSLoader.cpp  FTSQueryExecutor.cpp  Handle.cpp  Handle.h  IODispatch.cpp  IODispatch.h  Main.cpp  Makefile.linux  Message.cpp  Message.h  N1QLCreateIndex.cpp  N1QLDataset.cpp  N1QLLoader.cpp  N1QLQueryExecutor.cpp  Request.cpp  Request.h  Response.cpp  Response.h  ResultSet.cpp  ResultSet.h  SDDataset.cpp  SDLoader.cpp  Thread.h  ThreadUnix.cpp  ThreadWin32.cpp  (+22 more)
src/build_helpers/: have_views.sh
src/contrib/: debug++.h  debug.c  debug.h
src/views/: Makefile  main.c  viewopts.c  viewopts.h  viewrow.c  viewrow.h  views.out
srcutil/: errdefs.pl  gencompat.pl  logfuncs.pl
vs/: gen_nmakefile.pl
